--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -1,6 +1,8 @@
+<!-- Authors: Elijah Rodriguez Beltran, Adi Dasgupta, Tarush Gupta !-->
+
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -8,72 +10,161 @@
     <meta name="generator" content="Hugo 0.80.0">
     <title>EEG Display · Bootstrap v5.0</title>
 
-    
+
     <!-- IBRAIN javascript source -->
     <script type="text/javascript" src="../static/index_source.js"></script>
+    <script type="text/javascript" src="../static/server_requests.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+
+
+    <link href="../static/index_style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
         }
-      }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
     </style>
-
-  </head>
-  <body>
-    
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</header>
-
-<div class="container-fluid">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-      <div class="position-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
-              <button class="btn btn-sm btn-outline-secondary" onclick="openEEGFILE();">Select File</button>
-              <form id="eeg_file_form" action="" style="display: none">
-                <input type="file" id="eeg_file" name="eeg_file" , accept=".rec, .edf"><br><br>
-                <input type="submit"/>
-              </form>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">EEG Display</h1>
+</head>
+<body id="body" onload="loadIndexPage();">
+    <!-- TOP HEADER BAR -->
+    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <!-- Title -->
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN · EEG Reviewer</a>
         <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Select Time</button>
-          </div>
+        <div class="btn-group me-2">
+            <!-- Select time duration-->
+            <div>
+                <p>Duration</p>
+                <select class="form-select form-select-sm" type="number" id="duration-input" name="duration">
+                    <option value="1">1 second</option>
+                    <option value="5">5 seconds</option>
+                    <option value="10">10 seconds</option>
+                    <option value="30">30 seconds</option>
+                    <option value="60">60 seconds</option>
+                </select>
+           </div>
+            <div>
+                <p>Filter</p>
+                <select class="form-select form-select-sm" type="number" id="filter-input" name="filter-input">
+                    <option value="1000">1000 HZ</option>
+                    <option value="500">500 HZ</option>
+                    <option value="250">250 HZ</option>
+                    <option value="100">100 HZ</option>
+                </select>
+            </div>
+            <div>
+                <p>Amplitude</p>
+                <select class="form-select form-select-sm" type="number" id="amplitude-input" name="filter-input" disabled>
+                    <option id="amplitude-display" value="">200/-200</option>
+                </select>
+            </div>
         </div>
-      </div>
+        <!-- Tools (annotation, and time duration -->
 
-      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-    </main>
-  </div>
-</div>
+            <div class="btn-group me-2">
+                <!--Toggle display of buttons when annotations are uploaded is TODO -->
+                <span>
+                    <br>
+                    <button class="btn btn-outline-light" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
+                </span>
+
+            </div>
+        </div>
+    </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  </body>
+    <!-- SIDE BAR-->
+    <div id="sidebarMenu">
+    <nav>
+        <div id="sidebarItems">
+            <ul class="nav flex-column">
+                <li>
+                    <div id="title"></div>
+                </li>
+                 <!-- SELECT EEG FILE -->
+                <li class="nav-item">
+                    <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
+                    <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
+                            </div>
+                        </div>
+                        <input onclick="openFileSelect();" type="submit"/>
+                    </form>
+                </li>
+                <!-- SELECT ELECTRODE-->
+                <li>
+                    <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
+                    <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data"></form>
+                </li>
+                <br>
+                <!-- RUN MODEL -->
+                    <button id="model-button" class="btn btn-sm btn-outline-secondary" onclick="startModel();">Initiate Model</button><br>
+                    <select class="form-select form-select-sm" type="number" id="reference-input" name="reference-input">
+                        <option id="ref-default" selected>None Selected</option>
+                    </select>
+                    <div class="progress" id="ml-progress">
+                      <div id="ml-progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                    </div>
+                </li>
+                <!-- SELECT ANNOTATION FILE -->
+                    <button type="button" onclick="openAnnotationSelect();" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
+
+                    <form method = "POST" id = "ann_file_form" name = "annotation" enctype = 'multipart/form-data' action="/upload_ann" style="display: none">
+                        <div class="form-group-ann">
+                            <div class="custom-file-ann">
+                                <input type="file" class="csv-file" id="ann_file" name="ann_file" accept=".csv"><br>
+                            </div>
+                        </div>
+                        <input type="submit"/>
+                    </form>
+                </li>
+                <br>
+                <li>
+                    <!-- Close EEG FILE -->
+                    <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
+                        <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close">
+                        <br>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    </div>
+    <div class="annotation-menu">
+        <nav id="annotation-items"></nav>
+    </div>
+    <!-- Graph area -->
+    <div id="display-area">
+        <select id="color-select">
+            <option value="#51A1E8">Blue</option>
+            <option value="#000000">Black</option>
+            <option value="#ff0000">Red</option>
+            <option value="#ffff00">Yellow</option>
+        </select>
+        <div id="time_series"></div>
+        <footer class="slidecontainer">
+            <p class="slidecontainer" id="sliderdisplay"></p>
+            <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="1000">
+        </footer>
+    </div>
+</body>
 </html>
