converted avg settings to match common data url data return

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -75,6 +75,15 @@
                         <option value="100">100 HZ</option>
                     </select>
                 </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        Montage
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" id = "common" onclick="settings(this.id)">Common</a></li>
+                        <li><a class="dropdown-item" id = "average" onclick="settings(this.id);" >Average</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
