--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -75,14 +75,12 @@
                         <option value="100">100 HZ</option>
                     </select>
                 </div>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                        Montage
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" id = "common" onclick="settings(this.id)">Common</a></li>
-                        <li><a class="dropdown-item" id = "average" onclick="settings(this.id);" >Average</a></li>
-                    </ul>
+                        <div>
+                    <h2 class="btn btn-sm btn-outline-secondary">Montage</h2>
+                    <select class="form-select form-select-sm" type="number" id="montage" name="montage">
+                        <option value="true">Common</option>
+                        <option value="false">Average</option>
+                    </select>
                 </div>
             </div>
         </div>
