--- a/EEG_Website/static/index_style.css
+++ b/EEG_Website/static/index_style.css
@@ -17,6 +17,8 @@ footer.slidecontainer {
     left: 0;
     padding-left: 2%;
     padding-top: 5%;
+    overflow-x: hidden;
+    overflow-y: auto;
 
 }
 
