Implemented the pop-up interface with onset, description, duration, event electrodes and data starts at

--- a/EEG_Website/static/index_style.css
+++ b/EEG_Website/static/index_style.css
@@ -30,6 +30,9 @@ footer.slidecontainer {
     left: 85%;
     position: fixed;
     padding-top: 5%;
+
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .annotation-item {
@@ -51,4 +54,10 @@ footer.slidecontainer {
 
 #color-select {
     padding-left: 5%;
+
+}
+
+p {
+    text-align: center;
+    color: gainsboro;
 }
