--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -94,6 +94,12 @@
                     <option id="amplitude-display" value="">200/-200</option>
                 </select>
             </div>
+            <div>
+                <p>Montage</p>
+                <select class="form-select form-select-sm" type="number" id="montage" name="montage" disabled>
+                    <option id="common" value="common">Common</option>
+                </select>
+            </div>
         </div>
         <!-- Tools (annotation, and time duration -->
 
