working average settings

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -96,8 +96,9 @@
             </div>
             <div>
                 <p>Montage</p>
-                <select class="form-select form-select-sm" type="number" id="montage" name="montage" disabled>
-                    <option id="common" value="common">Common</option>
+                <select class="form-select form-select-sm" type="number" id="montage" name="montage">
+                    <option value="common">Common</option>
+                    <option value="average">Average</option>
                 </select>
             </div>
         </div>
